--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                     Wishing you the very happiest birthday princess Lish, with all my love and lots of big kisses!😘
                     <br>
                     <br>
-                    Made with ❤️ by yours Dhanu baba😊
+                    Made with ❤️ <br>by yours <br>Dhanu baba😊
 
                 </p>
             </div>
